Code change properties files

--- a/src/test/resources/config_qa.properties
+++ b/src/test/resources/config_qa.properties
@@ -4,3 +4,13 @@
 
 baseurl.gorest= https://gorest.qa.co.in
 
+baseurl.gorest = https://gorest.qa.co.in
+baseurl.contacts = https://thinking-tester-contact-list.herokuapp.qa.com
+baseurl.reqres = https://reqres.qa.in
+baseurl.basic_auth =https://the-internet.herokuapp.qa.com
+baseurl.products = https://fakestoreapi.qa.com
+baseurl.oauth2_amadeus = https://test.api.amadeus.qa.com
+baseurl.oauth2_spotify = https://accounts.spotify.qa.com
+baseurl.albums_spotify = https://api.spotify.qa.com
+baseurl.ergast_circuit = http://ergast.qa.com
+
